# chatHRD

./: .dockerignore  .env.example  .gitignore  Makefile  Modelfile  README.md  docker-compose.yml  pyproject.toml
docs/: data_for_task.md  db_schema_cms.md  db_schema_filestorage.md  db_schema_lists.md  files_for_parser_testing.md  parser_plan.md  specification.md
llm_api_tests/: math_reasoning_query.py  simple_query.py  structured_output_query.py
logs/: file_report.md
notebooks/: 001_Chroma Indexing and RAG Examples.ipynb  002_RAG pipelines with Haystack.ipynb  003_Use the Model in a full RAG pipeline.ipynb  01_indexing_pipeline_v1.ipynb  02_quering_pipeline.ipynb  03_QueryClassifierLLM.ipynb  03_quering_pipeline_QueryClassifierLLM.ipynb  04_quering_pipeline_QueryDecomposerLLM.ipynb  05_quering_pipeline_PickledBM25Retriever.ipynb  06_quering_pipeline_reranking.ipynb  07_quering_pipeline_full.ipynb  analyze_db_structure.ipynb  indexing_pipeline.py  model_testing.ipynb  pipeline.ipynb  quering_pipeline.py  visualize_db_relations.ipynb
ollama_service/: Dockerfile  check_model.sh  init.sh  start_server.py  verify_ollama.sh
scripts/: download_files.py  download_files_threaded.py  drop_databases.py  generate_file_report.py  parse_documents.py  restore_databases.py
src/chathrd/: __init__.py  llm.py  main.py
src/chathrd/cli/: __init__.py  index_command.py  query_command.py
src/chathrd/components/: __init__.py
src/chathrd/components/classifiers/: __init__.py  query_classifiers.py
src/chathrd/components/converters/: __init__.py  document_converters.py
src/chathrd/components/generators/: __init__.py  multi_query_handler.py
src/chathrd/components/processors/: __init__.py  document_processors.py
src/chathrd/components/retrievers/: __init__.py  bm25_retriever.py
src/chathrd/components/selectors/: __init__.py  response_selector.py
src/chathrd/config/: __init__.py  settings.py
src/chathrd/parsers/: __init__.py  base.py  csv_parser.py  doc_parser.py  docx_parser.py  pdf_parser.py  txt_parser.py  utils.py  xlsx_parser.py
src/chathrd/pipelines/: __init__.py  indexing.py  querying.py
src/chathrd/utils/: __init__.py  helpers.py
telegram_bot/: Dockerfile  bot.py  ollama_client.py  start_bot.sh  wait_for_model.sh
tests/: constants.py  create_test_files.py  test_parsers.py  utils.py
