[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chathrd"
version = "0.1.0"
description = "ChatHRD - система для работы с HR документами"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Your Name", email="your.email@example.com" }, # Замени на свои данные
]
dependencies = [
    "python-dotenv",
    "python-telegram-bot", # Добавлено для Telegram-бота
    "psycopg2-binary", # Для работы с PostgreSQL
    "requests",        # Для выполнения HTTP-запросов
    "python-docx==1.1.0",
    "PyMuPDF==1.23.8",
    "pandas==2.2.1",
    "openpyxl>=3.1.2",
    "tabulate==0.9.0",
    "xlrd>=2.0.1",  # Для поддержки старых форматов Excel
    "ebooklib>=0.18",
    "chardet>=5.2.0",
    "pytesseract==0.3.10",
    "Pillow==10.2.0",
    "openai>=1.0.0",   # Добавлено для работы с LLM API
    "graphviz>=0.20.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Или другая лицензия, если нужно
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.2",
    "ipywidgets>=8.1.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.292",
    "mypy>=1.5.1",
]
rag = [
    "haystack",
    "haystack-ai",
    "sentence-transformers",
    "datasets",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true 
